GNOME Bugzilla – Bug 695835
Misc bug fixes
Last modified: 2013-03-14 22:03:56 UTC
.
Created attachment 238859 [details] [review] cdda: Remove unneeded function argument
Created attachment 238860 [details] [review] cdda: Remove leading '/' from the filenames
Created attachment 238861 [details] [review] cdda: Fix warnings for each track on the CD (process:22937): GLib-CRITICAL **: g_convert: assertion `str != NULL' failed for each of the tracks as we tried to convert the genre (which was NULL)
Pushed to master Attachment 238859 [details] pushed as aac8860 - cdda: Remove unneeded function argument Attachment 238860 [details] pushed as 51ad0a9 - cdda: Remove leading '/' from the filenames Attachment 238861 [details] pushed as 7855cb4 - cdda: Fix warnings for each track on the CD