cdda: Remove unneeded function argument

https://bugzilla.gnome.org/show_bug.cgi?id=695835